<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/main_logo_image"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_title_material"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:text=""
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_title_material"
        android:id="@+id/edit_text_username"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_title_material"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:gravity="center"
        android:text=""
        android:textSize="@dimen/abc_text_size_title_material"
        android:id="@+id/edit_text_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login_label"
        android:id="@+id/button_login"/>

</LinearLayout>
